<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="230sp"
            android:src="@drawable/android"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toTopOf="@id/main" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/container_padding"
            android:paddingEnd="@dimen/container_padding"
            android:text="@string/author_name"
            app:layout_constraintEnd_toStartOf="@id/date"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/container_padding"
            android:paddingEnd="@dimen/container_padding"
            android:text="@string/date"
            android:textDirection="rtl"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toEndOf="@id/author"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/title"
            android:layout_width='match_parent'
            android:layout_height='wrap_content'
            android:paddingStart="@dimen/container_padding"
            android:paddingTop="@dimen/container_padding"
            android:paddingEnd="@dimen/container_padding"
            android:paddingBottom="@dimen/container_padding"
            android:text="@string/title"
            android:textColor="@color/teal_700"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@id/author" />

        <TextView
            android:id="@+id/paragraph"
            android:layout_width='match_parent'
            android:layout_height='wrap_content'
            android:paddingStart="@dimen/container_padding"
            android:paddingEnd="@dimen/container_padding"
            android:text="@string/paragraph"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <Button
            android:id="@+id/btnAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/container_padding"
            android:layout_marginEnd="@dimen/container_padding"
            android:text="@string/btn"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintTop_toBottomOf="@id/paragraph" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>